--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     color: rgb(214, 214, 214);
     box-shadow: 5px 6px rgba(0, 0, 0, 0.6);
     cursor: pointer;
-
+    margin-top: 10%;
     font-size: 100px;
     font-weight: 900;
     text-shadow: 3px 6px rgba(0, 0, 0, 0.2);
